clusters/image-converter/apps/argo/argocd-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true }'
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/instance: argocd
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8080
